--- a/core/static/css/own.css
+++ b/core/static/css/own.css
@@ -229,6 +229,8 @@
 .table-sm th, .table-sm td {padding: 0.3rem;}
 .vertical-middle {vertical-align: middle !important;}
 .fixed, .fixed2 {background-color: #48A1B1;border: 1px solid #fff !important; color: #fff;left: 0;position: sticky;}
+.fixed-row {top: 0;position: sticky;}
+.fixed-row2 {top: 30px;position: sticky;}
 .fixed2 {left: 55px;}
 table.border-in-fixed-columns .fixed{ left: -15px;}
 table.small-font, table.border-in-fixed-columns{border-collapse: separate !important;border: 1px solid #ddd !important;}
