--- a/core/templates/ep.html
+++ b/core/templates/ep.html
@@ -63,8 +63,10 @@
                     <tr class="bg-primary">
                         <th class="text-left">Tipo de Ingreso</th>
                         <th class="text-right">Inicial</th>
-                        <th class="text-right">Ejecutado</th>
-                        <th class="text-right">% Ejecutado</th>
+                        {% if periodo_list|keyvalue:year != 'I' %}
+                            <th class="text-right">Ejecutado</th>
+                            <th class="text-right">% Ejecutado</th>
+                        {% endif %}
                     </tr>
                     </thead>
                     <tbody>
@@ -72,28 +74,24 @@
                         <tr>
                             <td>{% firstof row.tipoingreso__nombre row.tipoingreso__clasificacion %}</td>
                             <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
-                            <td class="text-right">
-                                {% if periodo_list|keyvalue:year != 'I' %}
-                                    {{ row.final_ejecutado|million|default:0|intcomma }}
-                                {% else %}
-                                    0
-                                {% endif %}
-                            </td>
-                            <td class="text-right">
-                                {% if ejecutado and periodo_list|keyvalue:year != 'I' %}
-                                    {{ row.ejecutado|div:row.inicial_asignado|sub:1|mul:100|floatformat:2 }}%
-                                {% else %}
-                                    0%
-                                {% endif %}
-                            </td>
+
+                            {% if periodo_list|keyvalue:year != 'I' %}
+                                <td class="text-right">{{ row.final_ejecutado|million|default:0|intcomma }}</td>
+                            {% endif %}
+
+                            {% if ejecutado and periodo_list|keyvalue:year != 'I' %}
+                                <td class="text-right">{{ row.ejecutado|div:row.inicial_asignado|sub:1|mul:100|floatformat:2 }}%</td>
+                            {% endif %}
                         </tr>
                     {% endfor %}
                     </tbody>
                     <tr class="bold">
                         <td>TOTAL</td>
                         <td class="text-right">{{ asignado|million|intcomma }}</td>
-                        <td class="text-right">{{ ejecutado|million|intcomma|default:0 }}</td>
-                        <td class="text-right">{{ ep_ingresos|floatformat:2|default:0 }}%</td>
+                        {% if periodo_list|keyvalue:year != 'I' %}
+                            <td class="text-right">{{ ejecutado|million|intcomma|default:0 }}</td>
+                            <td class="text-right">{{ ep_ingresos|floatformat:2|default:0 }}%</td>
+                        {% endif %}
                     </tr>
                 </table>
             </div>
@@ -143,8 +141,10 @@
                     <tr class="bg-primary">
                         <th class="text-left">Tipo de Gasto</th>
                         <th class="text-right">Asignado</th>
-                        <th class="text-right">Ejecutado</th>
-                        <th class="text-right">% Ejecutado</th>
+                        {% if periodo_list|keyvalue:year != 'I' %}
+                            <th class="text-right">Ejecutado</th>
+                            <th class="text-right">% Ejecutado</th>
+                        {% endif %}
                     </tr>
                     </thead>
                     <tbody>
@@ -152,22 +152,22 @@
                         <tr>
                             <td>{% firstof row.subsubtipogasto__nombre row.subsubtipogasto__clasificacion|default:'Otros' %}</td>
                             <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
-                            <td class="text-right">{{ row.ejecutado|million|intcomma|default:0 }}</td>
-                            <td class="text-right">
-                                {% if row.inicial_asignado %}
+                            {% if periodo_list|keyvalue:year != 'I' %}
+                                <td class="text-right">{{ row.ejecutado|million|intcomma|default:0 }}</td>
+                                <td class="text-right">
                                     {{ row.ejecutado|div:row.inicial_asignado|sub:1|mul:100|floatformat:2 }}%
-                                {% else %}
-                                    0%
-                                {% endif %}
-                            </td>
+                                </td>
+                            {% endif %}
                         </tr>
                     {% endfor %}
                     </tbody>
                     <tr>
                         <td>TOTAL</td>
                         <td class="text-right">{{ gasignado|million|intcomma|default:0 }}</td>
-                        <td class="text-right">{{ gejecutado|million|intcomma|default:0 }}</td>
-                        <td class="text-right">{{ ep_gastos|default:0 }}%</td>
+                        {% if periodo_list|keyvalue:year != 'I' %}
+                            <td class="text-right">{{ gejecutado|million|intcomma|default:0 }}</td>
+                            <td class="text-right">{{ ep_gastos|default:0 }}%</td>
+                        {% endif %}
                     </tr>
                 </table>
             </div>
