--- a/core/templates/ep.html
+++ b/core/templates/ep.html
@@ -405,7 +405,7 @@
     <div class="container wide">
         <div class="row">
             <div class="col-md-12">
-                <h2><strong>Información Histórica </strong><br>
+                <h2><strong>Información Hist&oacute;rica </strong><br>
                     {{ indicator_name }}
                 </h2>
                 <h3>{% if not municipio %}Consolidado 153 municipios{% else %} {{ municipio }}{% endif %} </h3>
@@ -419,21 +419,32 @@
                 <div class="events" style="width:{{ history|length|mul:155 }}px">
                     <ol>
                         {% for income, expense in history %}
-                            <li><a href="" data-date="01/01/{{ row.gasto__anio }} 00:00"
-                                    {% if expense.gasto__anio == year|add:"0" %} class="selected" {% endif %}
-                                   style="left:{{ forloop.counter0|mul:"155" }}px;"><span
-                                    class="posicion">{{ expense.gasto__anio }}</span>
-                                <br/>
-                                {% if expense.gasto__periodo == 'I' %}
-                                    <span class="line-cifra">Gastos: {{ expense.asignado|million|intcomma }}</span>
+                            <li>
+                                <a href="" data-date="01/01/{{ row.gasto__anio }} 00:00"
+                                   {% if expense.gasto__anio == year|add:"0" %}class="selected"{% endif %}
+                                   style="left:{{ forloop.counter0|mul:"155" }}px;">
+                                    <span class="posicion"
+                                          {% if expense.gasto__periodo != 'F' %}data-toggle="tooltip"
+                                          data-placement="left"
+                                          title="P.{% if periodo_list|keyvalue:year == 'I' %}Inicial{% else %}
+                                                Intermedio{% endif %}"{% endif %}>
+                                        {{ expense.gasto__anio }}
+                                        {% if expense.gasto__periodo != 'F' %}
+                                            *
+                                        {% endif %}
+                                    </span>
                                     <br/>
-                                    <span class="line-cifra">Ingresos: {{ income.asignado|million|intcomma }}</span>
-                                {% else %}
-                                    <span class="line-cifra">Gastos: {{ expense.ejecutado|million|intcomma }}</span>
-                                    <br/>
-                                    <span class="line-cifra">Ingresos: {{ income.ejecutado|million|intcomma }}</span>
-                                {% endif %}
-                            </a></li>
+                                    {% if expense.gasto__periodo == 'I' %}
+                                        <span class="line-cifra">Gastos: {{ expense.asignado|million|intcomma }}</span>
+                                        <br/>
+                                        <span class="line-cifra">Ingresos: {{ income.asignado|million|intcomma }}</span>
+                                    {% else %}
+                                        <span class="line-cifra">Gastos: {{ expense.ejecutado|million|intcomma }}</span>
+                                        <br/>
+                                        <span class="line-cifra">Ingresos: {{ income.ejecutado|million|intcomma }}</span>
+                                    {% endif %}
+                                </a>
+                            </li>
                         {% endfor %}
                     </ol>
                     <span class="filling-line" aria-hidden="true" style="transform: scaleX(0.0772222);"></span>
@@ -471,7 +482,14 @@
                     </tr>
                     {% for row in anuales %}
                         <tr>
-                            <td>{{ row.ingreso__anio }}</td>
+                            <td>
+                                {{ row.ingreso__anio }}
+                                {% if periodo_list|keyvalue:row.ingreso__anio != 'F' %}
+                                    <span data-toggle="tooltip"
+                                          title="P.{% if periodo_list|keyvalue:row.ingreso__anio == 'I' %}Inicial{% else %}
+                                                Intermedio{% endif %}">*</span>
+                                {% endif %}
+                            </td>
                             <td class="text-right">{{ row.asignado|million|intcomma }}</td>
                             <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
                             {% if row.asignado %}
@@ -505,7 +523,14 @@
                     </tr>
                     {% for row in anualesg %}
                         <tr>
-                            <td>{{ row.gasto__anio }}</td>
+                            <td>
+                                {{ row.gasto__anio }}
+                                {% if periodo_list|keyvalue:row.gasto__anio != 'F' %}
+                                    <span data-toggle="tooltip"
+                                          title="P.{% if periodo_list|keyvalue:row.gasto__anio == 'I' %}Inicial{% else %}
+                                                Intermedio{% endif %}">*</span>
+                                {% endif %}
+                            </td>
                             <td class="text-right">{{ row.asignado|million|intcomma }}</td>
                             <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
                             {% if row.asignado %}
