--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -146,7 +146,7 @@
                                     Presupuesto inicial de gastos corrientes
                                 {% endif %}
                                 {{ year }}
-                                por su destino {% descargar_excel "ago6" %}</h5>
+                                {% descargar_excel "ago6" %}</h5>
                         </td>
                     </tr>
                     <tr class="bg-primary">
