--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -532,7 +532,7 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 {% descargar_excel "ago8" %}
-                <h3>Informaci&oacute;n Histor&iacute;ca de dependencia para asumir gastos corrientes</h3>
+                <h3>Informaci&oacute;n Histor&iacute;ca de {{ indicator_name }}</h3>
                 <h4 class="text-info">Millones de córdobas corrientes</h4>
                 <table class="table table-condensed">
                     <thead>
