indicando que las columnas del indicador son en M. de C$ y %

--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -540,8 +540,8 @@
                         <th class="text-center">Años</th>
                         <th class="text-center">Ingreso corrientes propios</th>
                         <th class="text-center">Gasto corrientes totales</th>
-                        <th class="text-center">Dependencia para asumir gastos corrientes</th>
-                        <th class="text-center">%</th>
+                        <th class="text-center">{{ indicator_name }} <br>(M. de C$)</th>
+                        <th class="text-center">{{ indicator_name }} <br>(%)</th>
                     </tr>
                     </thead>
                     <tbody>
